--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
+@import "~antd/dist/antd.css";
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+
 .App {
   text-align: center;
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+}
+
+.content {
+  padding: 1rem;
 }
 
 .App-logo {
